; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/obs-transitions/extr_transition-fade-to-color.c_smoothstep.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/obs-transitions/extr_transition-fade-to-color.c_smoothstep.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (float (float, float, float)* @smoothstep to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal float @smoothstep(float %0, float %1, float %2) #0 {
  %4 = alloca float, align 4
  %5 = alloca float, align 4
  %6 = alloca float, align 4
  store float %0, float* %4, align 4
  store float %1, float* %5, align 4
  store float %2, float* %6, align 4
  %7 = load float, float* %6, align 4
  %8 = load float, float* %4, align 4
  %9 = fsub float %7, %8
  %10 = load float, float* %5, align 4
  %11 = load float, float* %4, align 4
  %12 = fsub float %10, %11
  %13 = fdiv float %9, %12
  %14 = call float @clamp(float %13, float 0.000000e+00, float 1.000000e+00)
  store float %14, float* %6, align 4
  %15 = load float, float* %6, align 4
  %16 = load float, float* %6, align 4
  %17 = fmul float %15, %16
  %18 = load float, float* %6, align 4
  %19 = fmul float 2.000000e+00, %18
  %20 = fsub float 3.000000e+00, %19
  %21 = fmul float %17, %20
  ret float %21
}

declare dso_local float @clamp(float, float, float) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
